[package]
name = "UserAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = "0.10.1"
actix-web = "4.4"
anyhow = "1.0.89"
aws-config = "1.5.8"
aws-sdk-sesv2 = "1.51.0"
clap = { version = "4.5.20", features = ["cargo"] }
clap-cargo = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
mysql = "25.0.1"
oauth2 = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.31", features = ["cmake-build"] }
rand = "0.8.5"
actix-web-httpauth = "0.8.2"


# [lib]
# path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
