[package]
name = "UserAgent"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-session = "0.10.1"
actix-web = "4.4"
anyhow = "1.0.89"
aws-config = "1.5.8"
aws-sdk-sesv2 = "1.51.0"
clap = { version = "4.5.20", features = ["cargo"] }
clap-cargo = "0.14.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
mysql = "25.0.1"
oauth2 = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "mysql",
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
rdkafka = { version = "0.37", features = ["cmake-build"] }
rand = "0.8.5"
actix-web-httpauth = "0.8.2"
reqwest = "0.12.8" #{ version = "0.12.8", features = ["rustls-tls"] }
http = "1.1.0"


futures = "0.3"
http-client = "6.5.3"
schemars = { version = "0.8", optional = true }
rig-core = "0.12.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
longport = "2.1.12"
# async-std = "1.13.1"
async-std = { version = "1.13.1", features = ["attributes"] }
flate2 = "1.1.1"
fluvio = "0.27.0"
base64 = "0.22.1"
hmac = "0.12.1"
percent-encoding = "2.3.1"
sha1 = "0.10.6"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
bcrypt = "0.17.0"
futures-util = "0.3.31"


# [lib]
# path = "src/lib.rs"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
